# hypermarket

./: README.md  setup.cfg
hypermarket/: __init__.py  db.py  login_required.py
hypermarket/admin/: forms.py  users.json  views.py
hypermarket/admin/static/css/: main.css
hypermarket/admin/static/js/: inventory_priceM.js  main.js  ordersM.js  productM.js  warehouseM.js
hypermarket/admin/templates/: base.html
hypermarket/admin/templates/admin/: base.html  dashboard.html  inv_manage.html  inventory_priceM.html  login.html  ordersM.html  pro_manage.html  productM.html  upload.html  warehouseM.html
hypermarket/api/: views.py
hypermarket/static/js/: final_cart.js  order_approve.js
hypermarket/store/: calender.html  categories.json  views.py
hypermarket/store/static/js/: add_to_cart.js
hypermarket/store/templates/: base.html  cart.html  cart_approve.html  category.html  home.html  product.html  sabad.html
hypermarket/store/templates/store/: base.html  cart.html  cart_approve.html  category.html  home.html  order_success.html  product.html  sidebar_category.html
hypermarket/templates/: final_payment.html  sabad.html
