[metadata]
name = hypermarket 
version = 1.0.0
license = BSD-3-Clause
maintainer = Pallets
maintainer_email = contact@palletsprojects.com
description = The basic blog app built in the Flask tutorial.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true
install_requires =
    Flask
    werkzeug
    persiantools
    psycopg2
    pandas
    cryptography
    json


[coverage:run]
branch = True
source = hypermarket
